[package]
name = "rs-exchange-engine"
version = "0.1.0"
authors = ["jang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "chrono", "r2d2","numeric"] }
dotenv = "0.14.1"
config = "0.9"
toml = "0.5.3"
chrono = { version = "0.4.9", features = ["serde"] }
log = "0.4.8"
bigdecimal = "0.0.14"

serde_derive = "1.0.99"
serde = "1.0.99"

juniper = "0.14.2"
juniper_rocket = "0.4.1"
juniper_codegen = "0.14.2"

r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
r2d2-diesel = "1.0.0"

rocket = "0.4.2"
rocket_codegen = "0.4.2"